fixed img sizes and aligned them to flex start in projects container

--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,7 @@ figure {
   border: groove 1px grey;
   padding: 5px;
   margin-bottom: 30px;
+  flex-grow: 1;
 }
 
 .project-item:hover {
@@ -412,15 +413,20 @@ figure {
 .project-item img {
   filter: drop-shadow(1px 2px 6px lightgrey);
   margin: 20px 0px 40px 0px;
-  align-self: flex-start;
+  width: 100%; 
+  height: 125px;
 }
 
 .project-description {
   padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 .project-description p {
   margin-bottom: 30px;
+  font-size: .9em;
 }
 
 .project-description h5 {
@@ -582,11 +588,13 @@ figure {
   .project-link {
     margin: 40px 0 60px 0;
   }
-
+  
    .project-container {
     display: flex;
     justify-content: space-between; 
     flex-wrap: wrap;
+    align-items: flex-start;
+    
   }
 
   .project-item {
@@ -596,6 +604,7 @@ figure {
     padding: 0 15px;
   }
 
+ 
 
   /* Skills */ 
   #skills {
